# rust-wasm-todo-list

./: Cargo.toml  README.md  package-lock.json  package.json
src/: lib.rs  types.rs  utils.rs
static/: index.css  index.html  index.js
static/pkg/: rust_wasm_todo_list.d.ts  rust_wasm_todo_list.js  rust_wasm_todo_list_bg.wasm  rust_wasm_todo_list_bg.wasm.d.ts
