# You must change these to your own details.
[package]
name = "rust_wasm_todo_list"
version = "0.1.0"
authors = ["Yahya"]
categories = ["wasm"]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[features]
# If you uncomment this line, it will enable `wee_alloc`:
#default = ["wee_alloc"]

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.45"
wee_alloc = { version = "0.4.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
gloo-utils = { version = "0.1", features = ["serde"] }
serde_json = "1.0.105"
parking_lot = { version = "0.12.1", features = ["serde"] }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'HtmlTextAreaElement',
  'Node',
  'Window',
  'console',
  'Storage'
]

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

[dev-dependencies]
wasm-bindgen-test = "0.2.45"
futures = "0.1.27"
js-sys = "0.3.22"
wasm-bindgen-futures = "0.3.22"
